--- a/src/_layouts/base.njk
+++ b/src/_layouts/base.njk
@@ -21,7 +21,7 @@
   <meta name="msapplication-config" content="/assets/favicon/browserconfig.xml">
   <meta name="theme-color" content="#ffffff">
 
-  <link rel="stylesheet" href="/assets/styles.css">
+  <link rel="stylesheet" href="/styles.css">
 
 </head>
 <body>
