--- a/src/styles.css
+++ b/src/styles.css
@@ -5,20 +5,6 @@
   box-sizing: border-box;
 }
 
-/* Remove default margin */
-body,
-h1,
-h2,
-h3,
-h4,
-p,
-figure,
-blockquote,
-dl,
-dd {
-  margin: 0;
-}
-
 body {
   font-family: "Lucida Grande", "Lucida Sans Unicode", "Lucida Sans", "DejaVu Sans", "Bitstream Vera Sans", "Liberation Sans", Verdana, "Verdana Ref", sans-serif;
   line-height: 1.5;
@@ -27,7 +13,7 @@ body {
   padding-right: 5%;
 }
 p {
-  max-width: 32em;
+  max-width: 55ch;
 }
 main {
   max-width: 50em;
@@ -36,6 +22,9 @@ main {
 }
 address {
   font-style: inherit;
+}
+img {
+  width: 100%;
 }
 .logo {
   background-image: url(/assets/logo.svg);
