--- a/public/css/index.css
+++ b/public/css/index.css
@@ -90,7 +90,7 @@ a[href]:active {
 }
 
 main {
-  padding: 1rem;
+  padding-block: 1rem;
 }
 main :first-child {
   margin-top: 0;
@@ -148,7 +148,7 @@ header {
   gap: 1em .5em;
   flex-wrap: wrap;
   align-items: center;
-  padding: 1em;
+  padding-block: 1em;
 }
 .home-link {
   font-size: 1em; /* 16px /16 */
