--- a/public/css/index.css
+++ b/public/css/index.css
@@ -52,10 +52,6 @@ body {
 html {
   overflow-y: scroll;
 }
-body {
-  padding-inline: 5%;
-  max-width: 40em;
-}
 
 /* https://www.a11yproject.com/posts/how-to-hide-content/ */
 .visually-hidden {
@@ -91,6 +87,7 @@ a[href]:active {
 }
 
 main {
+  margin-inline: 5%;
   padding-block: 1rem;
 }
 main :first-child {
@@ -98,12 +95,18 @@ main :first-child {
 }
 
 header {
+  margin-inline: 5%;
   border-bottom: 1px dashed var(--color-gray-20);
 }
 header:after {
   content: "";
   display: table;
   clear: both;
+}
+
+footer {
+  margin-inline: 5%;
+  border-bottom: 1px dashed var(--color-gray-20);
 }
 
 .links-nextprev {
