--- a/_includes/layouts/base.njk
+++ b/_includes/layouts/base.njk
@@ -33,7 +33,9 @@
     <a href="#skip" class="visually-hidden">Skip to main content</a>
 
     <header>
-      <a href="/" class="home-link">{{ metadata.title }}</a>
+      <a href="/" class="home-link">
+        <img src="/img/logo.svg" alt="{{ metadata.title }}">
+      </a>
 
       {#- Read more about `eleventy-navigation` at https://www.11ty.dev/docs/plugins/navigation/ #}
       <nav>
