--- a/content/pages/post-construction-cleaning/index.njk
+++ b/content/pages/post-construction-cleaning/index.njk
@@ -11,13 +11,20 @@ permalink: "/{{ title | slugify }}/"
 
 {% banner "./banner.jpg", "banner" %}
 
-<p>Post-construction cleaning is an essential part of any construction project. At Clearview Cleaning Solutions Ltd, we understand that setbacks and delays are all part of this kind of work, which is why we are committed to helping construction companies meet deadlines by handing over projects no matter how big or small. We believe that being successful is also about going that extra mile for our clients.</p>
+<p>Post-construction cleaning is an essential part of any construction project. At Clearview Cleaning Solutions Ltd, we understand that setbacks and delays are all part of this kind of work, which is why we are committed to helping construction companies meet deadlines by handing over projects no matter how big or small. Our team of experts has years of experience in post-construction cleaning and knows how to clean paint, cement, glue, and concrete off delicate surfaces. We also understand that every project is unique and requires a tailored approach.</p>
 
-<p>From the moment we are given a project, we set in motion a cleaning program that will transform any construction site in a very short space of time. Our team of experts has years of experience in post-construction cleaning and knows how to clean paint, cement, glue, and concrete off delicate surfaces. We also understand that every project is unique and requires a tailored approach.</p>
+<p>At Clearview Cleaning Solutions Ltd, we pride ourselves on our ability to adapt and be flexible even when the pressure is on. We believe that this is what makes us one of the best companies in the business. Why Choose us for your Post Construction Clean?</p>
 
-<p>Our post-construction cleaning services include wiping down high and low areas for excess paint or other liquids like solvents and adhesives. The process involves removing any remaining construction debris, tackling stains and spots such as paint and caulking splashes and adhesive residue, wiping down windows, glass doors, and partitions, removing any stickers on glass or appliances, washing down walls, door frames, and baseboards, sweeping and vacuuming floors.</p>
-
-<p>At Clearview Cleaning Solutions Ltd, we pride ourselves on our ability to adapt and be flexible even when the pressure is on. We believe that this is what makes us one of the best companies in the business.</p>
+<ol>
+  <li>We use trained IPAF operatives to carry out any cherry picker or scissor lifts work, with their experience where able to clean any high-level areas.</li>
+  <li>We write site specific Risk & Method statements for every project and will identify any hazards and update site if we need to improve or amend our risk assessment.</li>
+  <li>All of our operatives receive comprehensive H&S training at induction and ongoing refresher training and toolbox talks.</li>
+  <li>All operatives will understand your site-specific method statement and risk assessment requirements.</li>
+  <li>All operatives have attended the Site Safety course and hold green CSCS cards and full PPE.</li>
+  <li>There is always a working supervisor on site, with some supervisors holding the SSSTS accreditation if required.</li>
+  <li>We pride ourselves on our flexibility and understand the ever-moving deadlines and timescales for client inspections and handovers.</li>
+  <li>We have the correct level of combined liability insurance and professional indemnity required for the construction industry.</li>
+</ol>
 
 <h2>Before</h2>
 
