drop telephone and email prefixes

--- a/_includes/layouts/base.njk
+++ b/_includes/layouts/base.njk
@@ -67,8 +67,8 @@
     <footer>
       <h2>Contact</h2>
       <address>
-        <p>Telephone: <a href="tel:01252629814">01252 629814</a></p>
-        <p>Email: <a href="mailto:info@clearviewcleaningsolutions.co.uk?subject=Enquiry">info@clearviewcleaningsolutions.co.uk</a></p>
+        <p><a href="tel:01252629814">01252 629814</a></p>
+        <p><a href="mailto:info@clearviewcleaningsolutions.co.uk?subject=Enquiry">info@clearviewcleaningsolutions.co.uk</a></p>
       </address>
     </footer>
 
