change nav item padding

--- a/public/css/index.css
+++ b/public/css/index.css
@@ -227,11 +227,8 @@ header {
   list-style: none;
 }
 
-.nav-item {
-  margin-block: 0.5em;
-}
-
 .nav-item a {
+  display: inline-block;
   padding-block: 0.5em;
 }
 
