--- a/_includes/layouts/base.njk
+++ b/_includes/layouts/base.njk
@@ -33,8 +33,6 @@
     4. Learn more: https://github.com/11ty/eleventy-plugin-bundle
     #}
 
-    {#- Add an arbitrary string to the bundle #}
-    {%- css %}* { box-sizing: border-box; }{% endcss %}
     {#- Add the contents of a file to the bundle #}
     {%- css %}{% include "public/css/index.css" %}{% endcss %}
 
@@ -83,7 +81,7 @@
           </p>
           <p>
             <label for="message">Message</label>
-            <textarea id="message" name="message" required></textarea>
+            <textarea id="message" name="message" required rows="5"></textarea>
           </p>
           <p>
             <button type="submit">Send</button>
