--- a/public/css/index.css
+++ b/public/css/index.css
@@ -111,11 +111,13 @@ textarea {
 button,
 [type="button"],
 [type="reset"],
-[type="submit"] {
+[type="submit"],
+input:not([type="radio"]),
+input:not([type="checkbox"]) {
   -webkit-appearance: button; /* [1] */
   -webkit-border-radius: 0; /* [2] */
 }
-  
+
 /**
 * [1] Remove the user agent styles from <fieldset>
 */
